@@ -1,5 +1,3 @@
-#Properties of this specific CALIPH build
-#Fri, 19 Apr 2013 15:39:09 +0200
 #
 # This file is part of the LIRE project: http://www.semanticmetadata.net/lire
 # LIRE is free software; you can redistribute it and/or modify
@@ -34,15 +32,15 @@
 # URL: http://www.morganclaypool.com/doi/abs/10.2200/S00468ED1V01Y201301ICR025
 #
 # Copyright statement:
-# --------------------
+# ====================
 # (c) 2002-2013 by Mathias Lux (mathias@juggle.at)
 #  http://www.semanticmetadata.net/lire, http://www.lire-project.net
 #
-# Updated: 16.04.13 18:32
+# Updated: 20.04.13 11:04
 #
 
 #Properties of this specific CALIPH build
 #Tue, 09 Apr 2013 13:39:22 +0200
 #Wed Sep 07 12:25:27 CEST 2011
-build-date=2013/04/19 15\:39
-build-number=169
+build-date=2013/04/20 11\:04
+build-number=172
